// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/Dropdown Default 1`] = `
<div>
  <style
    jsx={true}
  >
    
    label {
      font-family: Muli;
      font-weight: 700;
      font-size: 16px;
      color: #393F50;
      line-height: 20px;
    }

    .required:after {
      color: #EB4E2C;
      content: "*";
    }

    input, select {
      border-width: 0px 0px 1px 0px;
      border-color: #00239D;
      display: block;
      width: 99%;
      padding: 12px 5px 12px 5px;
      font-size: 14px;
      font-family: Muli;
      line-height: 16px;
      color: #393F50;
      background-color: #FFFFFF;
    }

    input::placeholder {
      color: #C4C4C4;
    }

    .error {
     font-family: Muli;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
     line-height: 15px;
     color: #EB4E2C;
    }
  
  </style>
  <label
    className=""
  >
    Status Mustahik
  </label>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="header "
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "display": "inline",
          }
        }
      >
        Pilih Status Mustahik
      </div>
      <img
        src="/dropdown-arrow.svg"
      />
    </div>
    <style
      jsx={true}
    >
      
  .header {
    border-bottom: 1px solid #00239D;
    display: block;
    width: 99%;
    padding: 12px 5px 12px 5px;
    font-size: 14px;
    font-family: Muli;
    line-height: 16px;
    color: #C4C4C4;
  }

  .chosen {
    color: #393F50;
  }

  .options {
    border-radius: 10px 10px 0px 0px;
    list-style: none;
    position: absolute;
    width: -webkit-fill-available;
    background-color: #F5F6F8;
    font-family: Muli;
    font-size: 14px;
    font-weight: 600;
    line-height: 18px;
    max-height: 400px;
    overflow-y: overlay;
    color: #393F50;
    padding: 20px 0px 0px 0px;
    z-index: 2;
  }

  .options:before {
    height: 4px;
    border-radius: 4px;
    background-color: #E5E5E5;
    width: 20%;
    position: absolute;
    top: 10px;
    left: 50%;
    transform: translate(-50%, 0);
    text-align: center;
    content: "a";
    overflow: hidden;
  }

  .option {
    padding: 15px 20px;
    text-align: center;
  }

  .option:hover {
    background-color: #002398;
    color: #FFFFFF;
  }

  img {
    position: absolute;
    right: 0px;
    top: 50%;
    transform: translateY(-50%);
  }

    </style>
  </div>
</div>
`;

exports[`Storyshots Input/Dropdown Error 1`] = `
<div>
  <style
    jsx={true}
  >
    
    label {
      font-family: Muli;
      font-weight: 700;
      font-size: 16px;
      color: #393F50;
      line-height: 20px;
    }

    .required:after {
      color: #EB4E2C;
      content: "*";
    }

    input, select {
      border-width: 0px 0px 1px 0px;
      border-color: #00239D;
      display: block;
      width: 99%;
      padding: 12px 5px 12px 5px;
      font-size: 14px;
      font-family: Muli;
      line-height: 16px;
      color: #393F50;
      background-color: #FFFFFF;
    }

    input::placeholder {
      color: #C4C4C4;
    }

    .error {
     font-family: Muli;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
     line-height: 15px;
     color: #EB4E2C;
    }
  
  </style>
  <label
    className=""
  >
    Status Mustahik
  </label>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="header "
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "display": "inline",
          }
        }
      >
        Pilih Status Mustahik
      </div>
      <img
        src="/dropdown-arrow.svg"
      />
    </div>
    <style
      jsx={true}
    >
      
  .header {
    border-bottom: 1px solid #00239D;
    display: block;
    width: 99%;
    padding: 12px 5px 12px 5px;
    font-size: 14px;
    font-family: Muli;
    line-height: 16px;
    color: #C4C4C4;
  }

  .chosen {
    color: #393F50;
  }

  .options {
    border-radius: 10px 10px 0px 0px;
    list-style: none;
    position: absolute;
    width: -webkit-fill-available;
    background-color: #F5F6F8;
    font-family: Muli;
    font-size: 14px;
    font-weight: 600;
    line-height: 18px;
    max-height: 400px;
    overflow-y: overlay;
    color: #393F50;
    padding: 20px 0px 0px 0px;
    z-index: 2;
  }

  .options:before {
    height: 4px;
    border-radius: 4px;
    background-color: #E5E5E5;
    width: 20%;
    position: absolute;
    top: 10px;
    left: 50%;
    transform: translate(-50%, 0);
    text-align: center;
    content: "a";
    overflow: hidden;
  }

  .option {
    padding: 15px 20px;
    text-align: center;
  }

  .option:hover {
    background-color: #002398;
    color: #FFFFFF;
  }

  img {
    position: absolute;
    right: 0px;
    top: 50%;
    transform: translateY(-50%);
  }

    </style>
  </div>
  <span
    className="error"
  >
    Error message
  </span>
</div>
`;

exports[`Storyshots Input/Dropdown Required 1`] = `
<div>
  <style
    jsx={true}
  >
    
    label {
      font-family: Muli;
      font-weight: 700;
      font-size: 16px;
      color: #393F50;
      line-height: 20px;
    }

    .required:after {
      color: #EB4E2C;
      content: "*";
    }

    input, select {
      border-width: 0px 0px 1px 0px;
      border-color: #00239D;
      display: block;
      width: 99%;
      padding: 12px 5px 12px 5px;
      font-size: 14px;
      font-family: Muli;
      line-height: 16px;
      color: #393F50;
      background-color: #FFFFFF;
    }

    input::placeholder {
      color: #C4C4C4;
    }

    .error {
     font-family: Muli;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
     line-height: 15px;
     color: #EB4E2C;
    }
  
  </style>
  <label
    className="required"
  >
    Status Mustahik
  </label>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="header "
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "display": "inline",
          }
        }
      >
        Pilih Status Mustahik
      </div>
      <img
        src="/dropdown-arrow.svg"
      />
    </div>
    <style
      jsx={true}
    >
      
  .header {
    border-bottom: 1px solid #00239D;
    display: block;
    width: 99%;
    padding: 12px 5px 12px 5px;
    font-size: 14px;
    font-family: Muli;
    line-height: 16px;
    color: #C4C4C4;
  }

  .chosen {
    color: #393F50;
  }

  .options {
    border-radius: 10px 10px 0px 0px;
    list-style: none;
    position: absolute;
    width: -webkit-fill-available;
    background-color: #F5F6F8;
    font-family: Muli;
    font-size: 14px;
    font-weight: 600;
    line-height: 18px;
    max-height: 400px;
    overflow-y: overlay;
    color: #393F50;
    padding: 20px 0px 0px 0px;
    z-index: 2;
  }

  .options:before {
    height: 4px;
    border-radius: 4px;
    background-color: #E5E5E5;
    width: 20%;
    position: absolute;
    top: 10px;
    left: 50%;
    transform: translate(-50%, 0);
    text-align: center;
    content: "a";
    overflow: hidden;
  }

  .option {
    padding: 15px 20px;
    text-align: center;
  }

  .option:hover {
    background-color: #002398;
    color: #FFFFFF;
  }

  img {
    position: absolute;
    right: 0px;
    top: 50%;
    transform: translateY(-50%);
  }

    </style>
  </div>
</div>
`;
